<resources>
    <string name="app_name">Contactos</string>
    <string name="bemvindo">Bem vindo à aplicação</string>

    <string name="nome">Insere o Nome (*)</string>
    <string name="nome2">Nome</string>

    <string name="idade">Insere a Idade</string>
    <string name="idade2">Idade</string>

    <string name="numero">Insere o Numero (*)</string>
    <string name="numero2">Numero</string>

    <string name="pais">Insere o País</string>
    <string name="pais2">País</string>

    <string name="codpostal">Insere o Codigo Postal</string>
    <string name="codpostal2">Codigo Postal</string>

    <string name="email">Insere o Email</string>
    <string name="email2">Email</string>

    <string name="guardar">Guardar</string>

    <string name="Iniciar">Iniciar</string>
    <string name="criar">Criar Contacto</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="removido">Removido</string>
    <string name="existente">Utilizador ja existe</string>
    <string name="pwd">Passwords nao coincidem</string>

    <string name="genero">Genero</string>
    <string name="M">Masculino</string>
    <string name="FM">Feminino</string>

    <string name="NomePassInc">Nome ou password incorreto!</string>
    <string name="PI">Passwords nao sao iguais</string>
    <string name="NomeReg">Nome ja se encontra registado</string>

    <string name="Campos">Campos obrigatorios (*)</string>
    <string name="editado">Contacto Editado</string>
    <string name="criado">Contacto Criado</string>

    <string name="adicionar">Adicionar</string>
    <string name="Aviso">Tem a certeza?</string>
    <string name="sim">Sim</string>
    <string name="nao">Nao</string>
    <string name="carateres">Caracteres insuficientes. Mínimo: 6 caracteres em ambos os campos.</string>

    <string name="Localidade">Localidade</string>
    <string name="Viana">Viana do Castelo</string>
    <string name="Braga">Braga</string>




</resources>