<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".Adicionar">


    <TextView
        android:id="@+id/criar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAllCaps="true"
        android:text="@string/criar"
        android:layout_marginBottom="40dp"
        />

    <EditText
        android:id="@+id/nome"
        android:layout_below="@id/criar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxLength="40"
        android:inputType="textAutoCorrect"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/numero"
        android:layout_below="@id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLength="15"
        android:hint="@string/numero" />

    <EditText
        android:id="@+id/idade"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLength="3"
        android:hint="@string/idade" />

    <EditText
        android:id="@+id/pais"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:inputType="textAutoCorrect"
        android:maxLength="30"
        android:hint="@string/pais"
        android:layout_toRightOf="@+id/idade"
        android:layout_below="@+id/numero"
        />
    <EditText
        android:id="@+id/codpostal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:maxLength="10"
        android:inputType="textPostalAddress"
        android:hint="@string/codpostal"
        android:layout_below="@+id/idade"
    />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:hint="@string/email"
        android:layout_below="@+id/codpostal"
        />

    <Spinner
        android:id="@+id/genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/email"/>

    <Button
        android:id="@+id/button"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="bt1"/>



</RelativeLayout>
